<resources>
    <string name="app_name">SmartFit</string>
    <string name="app_company">公司SLOGAN</string>
    <string name="input_address">输入地名</string>
    <string name="menu_main">首页</string>
    <string name="menu_class">课程</string>
    <string name="menu_dynamic">动态</string>
    <string name="menu_info">信息</string>
    <string name="menu_mine">我的</string>
    <string name="user_name">用户名</string>
    <string name="password">请输入密码</string>
    <string name="login_in">登录</string>
    <string name="remeber_pass">记住密码</string>
    <string name="forget_pass">忘记密码</string>
    <string name="forget_pass_ask">忘记密码？</string>
    <string name="phone_quick_regist">手机快速登记</string>
    <string name="code">请输入验证码</string>
    <string name="send_success">短信已发送</string>
    <string name="third_login_type">第三方方式</string>
    <string name="phone_num">请输入手机号</string>
    <string name="get_code">获取验证码</string>
    <string name="new_password">新密码</string>
    <string name="old_password">原始密码</string>
    <string name="reset_password">重置密码</string>
    <string name="register">注册</string>
    <string name="app_regiter_tittle">SmartFit健身协议</string>
    <string name="group_experien">团操课</string>
    <string name="small_class">小班课</string>
    <string name="private_education">私教课</string>
    <string name="aerobic_apparatus">有氧器械</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="order_experise_time">预约锻炼时间</string>
    <string name="sure">确认</string>
    <string name="update_already">已更新</string>
    <string name="input_search_contition">课程名称/教练名/健身馆</string>
    <string name="find_conditon_result">个‘%s’的结果</string>
    <string name="less_fifty">&lt;50</string>
    <string name="coach">教练</string>
    <string name="space">场地</string>
    <string name="class_detail">课程详情</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_deal_info">DealInfoActivity</string>
    <string name="title_activity_main_business">MainBusinessActivity</string>
    <string name="title_activity_search_class">SearchClassActivity</string>
    <string name="title_activity_group_class_detail">GroupClassDetailActivity</string>
    <string name="title_activity_coach_info">CoachInfoActivity</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="title_activity_aerobic_appratus_detail">AerobicAppratusDetailActivity</string>
    <string name="title_activity_aerobic_appratus_order_success">
        AerobicAppratusOrderSuccessActivity
    </string>
    <string name="title_activity_group_class_order_success">GroupClassOrderSuccessActivity</string>
    <string name="title_activity_contact_coach">ContactCoachActivity</string>
    <string name="tip_accept_order">提示：第一位接单的教练，将成为本次私教课的教练。</string>
    <string name="title_activity_order_private_education_success">
        OrderPrivateEducationSuccessActivity
    </string>
    <string name="title_activity_my_ticket_gift">MyTicketGiftActivity</string>
    <string name="tick_gift">我的券包</string>
    <string name="eaquel_ticket">抵用券</string>
    <string name="title_activity_my_classes">MyClassesActivity</string>
    <string name="my_classes">我的课程</string>
    <string name="my_add_classes">我加入的</string>
    <string name="already_over">已结束</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_coach">联系教练</string>
    <string name="cancle_class">取消课程</string>
    <string name="going">进行中</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="how_publish_class">如何使用课程发起？</string>
    <string name="cannot_topup">钱包无法充值？</string>
    <string name="server_phone">客服电话</string>
    <string name="server_phone_num">4006053337</string>
    <string name="server_time">(周一至周六 9：00~18：00)</string>
    <string name="help">帮助</string>
    <string name="suggest_fadeback">意见反馈</string>
    <string name="title_activity_fade_back">FadeBackActivity</string>
    <string name="question_desc">问题描述</string>
    <string name="fadeback_tips">请告诉我们你的疑惑或意见</string>
    <string name="question_desc_photo">图片(问题截图、选填)</string>
    <string name="submit">提交</string>
    <string name="fans">粉丝</string>
    <string name="search">搜索</string>
    <string name="attention">关注</string>
    <string name="health_friends">健身伙伴</string>
    <string name="open_coach_auth">开启教练身份</string>
    <string name="name">姓名</string>
    <string name="card_id">身份证号</string>
    <string name="card_photo">身份证照片</string>
    <string name="word_qulity_photo">从业者正式照</string>
    <string name="auth_photo">获得的证书1</string>
    <string name="city">城市</string>
    <string name="input_city_name">输入城市名</string>
    <string name="all_city">全部城市</string>
    <string name="loading">加载中...</string>
    <string name="phone_cannot_empty">请输入手机号</string>
    <string name="phone_format_error">手机号码输入错误</string>
    <string name="no_more_data">已无更多数据</string>
    <string name="no_data">暂无数据</string>
    <string name="no_report_members">赶紧参加，您是第一位</string>
    <string name="title_activity_class_commend_list">ClassCommendListActivity</string>
    <string name="class_commend">课程评价</string>
    <string name="no_commend">暂无评论</string>
    <string name="login_ing">登录中...</string>
    <string name="login_success">成功</string>
    <string name="passowr_cannot_empt">密码不能为空</string>
    <string name="withdraw">提现</string>
    <string name="recharge">充值</string>
    <string name="current_money">当前余额</string>
    <string name="current_pay_record">最近收支明细</string>
    <string name="coach_ing">进行中</string>
    <string name="find_substitue">找人代课</string>
    <string name="number_list">成员名单</string>
    <string name="dialet_call">拨打电话</string>
    <string name="please_to_substitut">请他代课</string>
    <string name="photo_head">头像</string>
    <string name="sex">性别</string>
    <string name="sign">签名</string>
    <string name="bind_phone">绑定号码</string>
    <string name="login_password">登录密码</string>
    <string name="update">修改</string>
    <string name="account_info">账户信息</string>
    <string name="no_coach_auth">尚未认证</string>
    <string name="coach_auth">教练资料认证</string>
    <string name="already_auth">已认证</string>
    <string name="coach_brief">教练简历</string>
    <string name="not_edit">未编写</string>
    <string name="not_complate">未填写</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="teach_classes">授课项目</string>
    <string name="add_new_work_point_info">添加新的工作信息</string>
    <string name="my_work">我的工作</string>
    <string name="click_setting">点击设置</string>
    <string name="work_address">工作地点</string>
    <string name="setting_success">已完成</string>
    <string name="work_time">工作时间</string>
    <string name="work_eidt">工作编辑</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="code_cannot_empty">验证码不能为空</string>
    <string name="user_name_cannot_empty">用户名不能为空</string>
    <string name="register_ing">注册中...</string>
    <string name="register_success">注册成功</string>
    <string name="have_not_agree_deal">还未同意用户协议</string>
    <string name="old_password_cannot_empty">请输入原始密码</string>
    <string name="old_password_is_error">原始密码输入错误</string>
    <string name="reset_ing">重置中...</string>
    <string name="no_city_location">城市定位失败</string>
    <string name="no_address_list">暂无场馆信息</string>
    <string name="select_by_time">按时间排序</string>
    <string name="select_by_coach">按教练得分排序</string>
    <string name="select_by_left">按剩余名额排序</string>
    <string name="add_more_auth_books">添加更多证书</string>
    <string name="your_coach_info_not_submit">您的教练资料尚未提交</string>
    <string name="your_coach_info_is_vertify">您的教练资料正在等待审核..</string>
    <string name="uploading">上传中...</string>
    <string name="subimit_success">提交完成</string>
    <string name="try_later">稍后再试</string>
    <string name="account_cannot_empty">账号不能为空</string>
    <string name="new_password_cannot_empty">新密码不能为空</string>
    <string name="title_activity_wait_vertify">WaitVertifyActivity</string>
    <string name="title_activity_coach_brief">CoachBriefActivity</string>
    <string name="coach_brief_tips">请简单填写您的简历，经审核后，会展示给其他用户看</string>
    <string name="please_fill_brief">请填写教练资料</string>
    <string name="submit_ing">正在提交</string>
    <string name="title_activity_other_custome_main">OtherCustomeMainActivity</string>
    <string name="add_success">已添加</string>
    <string name="focus_success">已关注</string>
    <string name="select_work_date">选择工作日期</string>
    <string name="more_comments">更多评论</string>
    <string name="recharge_success">充值完成</string>
    <string name="publish_class">发布课程</string>
    <string name="title_activity_course_message">CourseMessageActivity</string>
    <string name="course_messages">课程消息</string>
    <string name="friends_message">好友消息</string>
    <string name="ignore">忽略</string>
    <string name="accepty">接受</string>
    <string name="title_activity_custom_class_three">CustomClassThreeActivity</string>
    <string name="class_name">课程名称</string>
    <string name="class_content">课程内容</string>
    <string name="title_activity_custome_class">CustomeClassActivity</string>
    <string name="start_custom_class">开始自订课程</string>
    <string name="title_activity_dynamic_detail">DynamicDetailActivity</string>
    <string name="no_sign">这个人太懒，还没有签名</string>
    <string name="title_activity_system_message_list">SystemMessageListActivity</string>
    <string name="system_message">系统消息</string>
    <string name="aggree_to_instead_class">同意代课</string>
    <string name="refuse_to_instead_class">拒绝代课</string>
    <string name="course_aggree_info">Hi，我是您参加的‘%s’课程教练，有什么疑问请主动联系我！</string>
    <string name="refuse_your_course">‘%1$s’拒绝了你的‘%2$s’课程的代课请求！</string>
    <string name="accept_your_course">‘%1$s’接受了你的‘%2$s’课程的代课请求！</string>
    <string name="reqeust_have_send">请求已发出</string>
    <string name="fqa_1_tittle">SmartFit一共有几家门店，具体在什么地方？</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_info">Smartfit是一个小而精的智能化健身系统，我们拥有线上独立APP和线下自有场馆，所有场馆及课程均可在APP端自主预约。我们还是一个开放性的教练轻创业平台，拥有资深、专业的签约教练团队，专注教学，通过提升课程质量打造个人品牌。Smartfit正以创新扩展健身的新可能，希望经过数字之手的改造，让更多人享受到优质、便捷的健身体验。</string>
    <string name="deal_one">一、用户资格</string>
    <string name="deal_one_one">1、SmartFit运动健身采用用户制服务模式，只有注册成为用户方能享受SmartFit提供的各项专业健身服务及相关配套服务。</string>
    <string name="deal_one_two">2、取得用户资格应办理相关入会手续，取得用户资格后，即代表已知晓SmartFit有关健身的规则与警示，承诺遵守SmartFit的相关规定。</string>
    <string name="deal_one_three">3、因经营管理需要，SmartFit会针对不同用户办理不同类别的电子用户卡，但无论您持有何种电子用户卡，都将在享受用户权利的同时，受到本协议的约束。</string>
    <string name="deal_one_four">4、本协议所称“用户”，是指年满16周岁未满60周岁身体健康，并购买健身服务商品缴纳全部相关费用，能如实提供和陈述个人信息，取得SmartFit发放的电子用户卡的人士。因此您有义务对入会时所提供资料的真实性、合法性负责。</string>
    <string name="deal_two">二、用户资格的取得方式</string>
    <string name="deal_two_one">1、原始取得，指在微信公众账号“SmartFit健身圈”或SmartFit手机客户端注册、填写真实、有效、全面的个人资料，办理入会手续并交纳全部相关费用后取得用户资格。</string>
    <string name="deal_two_two">2、继受或转让取得，指在本协议约定的特殊事由出现时，通过办理一定的手续，由非用户的第三方取得用户资格，或获得由其他注册用户赠送的健身服务，原用户资格终止。</string>
    <string name="deal_three">三、SmartFit电子产品的管理</string>
    <string name="new_info_need_revertify">新增的认证资料需要再次通过认证</string>
    <string name="card_tips">请输入健身实体卡串号</string>
    <string name="user_card_tips">健身实体卡一经使用即失效，若产生退课，健身实体卡将退到账户礼券中</string>
    <string name="bind_card_now">立即绑定</string>
</resources>