<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.smartfit.activities.CustomDetailInfoActivity">
    <include layout="@layout/common_header_view"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/image_padding_big"
        android:paddingBottom="@dimen/image_padding_big"
        android:paddingRight="@dimen/image_padding_big"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/photo_head"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_normal" />


        <com.smartfit.views.SelectableRoundedImageView
            android:id="@+id/iv_headerr"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/icon_pay_mr"
            app:sriv_border_color="@color/white"
            app:sriv_border_width="2dip"
            app:sriv_left_bottom_corner_radius="0dip"
            app:sriv_left_top_corner_radius="0dip"
            app:sriv_oval="true"
            app:sriv_right_bottom_corner_radius="0dip"
            app:sriv_right_top_corner_radius="0dip" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_name"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text=""
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sex"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="男"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sign"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tv_motto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/no_sign"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/bind_phone"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tv_bind_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text=""
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/login_password"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tv_update_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/update"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/white"
      >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/coach_auth"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/tv_coach_auth_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/no_coach_auth"
            android:drawablePadding="@dimen/image_padding_big"
            android:drawableRight="@mipmap/icon_next_w_on"
            android:textColor="@color/common_header_bg"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>

</LinearLayout>
